tests/bonsai/error/no-return.bonsai
func foo(i : i32) -> i32 {
    if i == 0 {
        return i;
    } else if i < 0 {
        return -1;
    }
}
